@@ -1,4 +1,7 @@
+2001-07-09  John Kirkland <jpk@bl.org>
 
+	* Photo caption setting now works for URLs.  This is
+	  feature #425987 from sf.
 
 
 2001-07-08  John Kirkland <jpk@bl.org>
